python/soma/web/static/controller.css
input.has_error,
textarea.has_error
{
    background: #CD201F;
    color: #ffffff;
}

.controller {
    width: 1fr;
    display: grid;
    grid-template-columns: min-content 1fr;
    grid-column-gap: 0.2em;
}

.controller > * {
    grid-column-start: 2;
    grid-column-end: span 1;
    grid-row-end: span 1;
}

.controller > label, .controller > .label {
    grid-column-start: 1;
    grid-column-end: span 1;
    grid-row-end: span 1;
}

.controller > fieldset {
    grid-column-start: 1;
    grid-column-end: span 2;
    grid-row-end: span 1;
}

.controller > input[type=checkbox] {
    justify-self: start;
}

.controller > fieldset.collapsed {
    padding-top: 0;
    padding-bottom: 0;
}

.controller > fieldset.collapsed > * {
    display: none;
}

.controller > fieldset.collapsed > legend {
    display: initial;
}

.controller > fieldset > legend > label::before {
    content: "▼ ";
}

.controller > fieldset.collapsed > legend > label::before {
    content: "▻ ";
}

.button_and_element {
    display: grid;
    grid-template-columns: min-content 1fr;
    grid-column-gap: 0.2em;
}

